test/types/void/void-field-5.good
void-field-5.chpl:4: error: Field 'a' cannot be declared 'void'. Consider using 'nothing' instead.
