test/types/void/void-field-5.chpl
type ta = void;

class c {
  var a : ta;
}

new c();

